<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_employee_name"
            android:paddingHorizontal="5dp" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/enter_description"
            android:paddingHorizontal="5dp" />

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/enter_the_price"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_latitude"
            android:inputType="number" />

        <EditText
            android:id="@+id/et_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_longitude"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_product" />
    </LinearLayout>
</RelativeLayout>