<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:padding="15dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/row_name"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/row_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/row_description"
            android:textColor="@color/black"
            android:text="@string/description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/row_price"
            android:text="@string/price"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update"
            android:layout_margin="5dp"
            android:backgroundTint="@color/teal_200"
            android:text="@string/update_btn_text"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_btn_text"
            android:id="@+id/btn_delete"/>


    </LinearLayout>
</LinearLayout>